--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.2
   cloud_firestore: ^4.8.2
+  google_mlkit_text_recognition: ^0.10.0
 
 
 flutter:
